syntax = "proto3";

package acton.dx.auth.v1;

// Session management service
service SessionService {
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
  rpc ValidateSession(ValidateSessionRequest) returns (ValidateSessionResponse);
  rpc UpdateSession(UpdateSessionRequest) returns (UpdateSessionResponse);
  rpc DestroySession(DestroySessionRequest) returns (DestroySessionResponse);
  rpc AddFlashMessage(AddFlashMessageRequest) returns (AddFlashMessageResponse);
  rpc GetAndClearFlashMessages(GetFlashMessagesRequest) returns (GetFlashMessagesResponse);
}

// Password operations service
service PasswordService {
  rpc HashPassword(HashPasswordRequest) returns (HashPasswordResponse);
  rpc VerifyPassword(VerifyPasswordRequest) returns (VerifyPasswordResponse);
}

// CSRF token management service
service CsrfService {
  rpc GenerateToken(GenerateTokenRequest) returns (GenerateTokenResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

// User management service
service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

// Session data
message Session {
  string session_id = 1;
  optional int64 user_id = 2;
  optional string user_email = 3;
  optional string user_name = 4;
  map<string, string> data = 5;
  string csrf_token = 6;
  int64 created_at = 7;
  int64 expires_at = 8;
}

// Flash message
message FlashMessage {
  string level = 1;
  string message = 2;
}

// Session service messages
message CreateSessionRequest {
  optional int64 user_id = 1;
  int64 ttl_seconds = 2;
  map<string, string> initial_data = 3;
}

message CreateSessionResponse {
  Session session = 1;
}

message ValidateSessionRequest {
  string session_id = 1;
}

message ValidateSessionResponse {
  bool valid = 1;
  optional Session session = 2;
}

message UpdateSessionRequest {
  string session_id = 1;
  map<string, string> data = 2;
  optional int64 user_id = 3;
}

message UpdateSessionResponse {
  bool success = 1;
  optional Session session = 2;
}

message DestroySessionRequest {
  string session_id = 1;
}

message DestroySessionResponse {
  bool success = 1;
}

message AddFlashMessageRequest {
  string session_id = 1;
  FlashMessage flash = 2;
}

message AddFlashMessageResponse {
  bool success = 1;
}

message GetFlashMessagesRequest {
  string session_id = 1;
}

message GetFlashMessagesResponse {
  repeated FlashMessage messages = 1;
}

// Password service messages
message HashPasswordRequest {
  string password = 1;
}

message HashPasswordResponse {
  string hash = 1;
}

message VerifyPasswordRequest {
  string password = 1;
  string hash = 2;
}

message VerifyPasswordResponse {
  bool valid = 1;
}

// CSRF service messages
message GenerateTokenRequest {
  string session_id = 1;
}

message GenerateTokenResponse {
  string token = 1;
}

message ValidateTokenRequest {
  string session_id = 1;
  string token = 2;
}

message ValidateTokenResponse {
  bool valid = 1;
}

// User data
message User {
  int64 id = 1;
  string email = 2;
  string name = 3;
  string password_hash = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

// User service messages
message CreateUserRequest {
  string email = 1;
  string name = 2;
  string password = 3;
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  optional string email = 2;
  optional string name = 3;
  optional string password = 4;
}

message DeleteUserRequest {
  int64 id = 1;
}

message UserResponse {
  optional User user = 1;
}

message DeleteUserResponse {
  bool success = 1;
}
